// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputValidationError Элемент не рендерится, снапшот 1`] = `
<div>
  <div />
</div>
`;

exports[`InputValidationError Элемент рендерится, снапшот 1`] = `
<div>
  <div>
    <p
      class="error"
    >
      error
    </p>
  </div>
</div>
`;
